[tool.poetry]
name = "settlement"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
settlement = "settlement.main:main"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
pandas = "<1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
